feat: code cleaning, getter setter etc...